--- a/arts/20180928_week6.md
+++ b/arts/20180928_week6.md
@@ -141,7 +141,7 @@ class Solution {
 
 ## 3.Tip
 
-这周除了一个线上的事故，后面查看原因是配置文件搞错了。我们现在是每个环境都有一个配置文件，随版本发布，经常改漏了，灰度的改了，线上没改。后面使用了公司内部提供的一个配置中心，支持全环境发布，用了统一的配置中心之后，觉得之前那种方式简直low爆了。
+这周出了一个线上的事故，后面查看原因是配置文件搞错了。我们现在是每个环境都有一个配置文件，随版本发布，经常改漏了，灰度的改了，线上没改。后面使用了公司内部提供的一个配置中心，支持全环境发布，用了统一的配置中心之后，觉得之前那种方式简直low爆了。
 
 目前开源的配置中心比较有名的有两个，一个是百度的Disconf，一个是携程的Apollo。如果没有能力自研的话，这两个是不错的选择。
 
