--- a/arts/20180928_week6.md
+++ b/arts/20180928_week6.md
@@ -135,7 +135,7 @@ class Solution {
 
 [Web Security: an introduction to HTTP](https://medium.freecodecamp.org/web-security-an-introduction-to-http-5fa07140f9b3)
 
-这是Medium上**Web Securtity**系列文章的第二篇，这篇主要说了如果安全地使用http协议，比如使用https协议或者http2协议，但是目前http2还没大规模使用，还有就是发送敏感数据时，请不要使用get请求方式，要用post提交。这一篇有点长，读下来花了不少时间，也可能是自己英文阅读水平不高，继续努力。
+这是Medium上**Web Securtity**系列文章的第二篇，这篇主要说了如何安全地发送http请求，比如使用https协议或者http2协议，但是目前http2还没大规模使用，还有就是发送敏感数据时，请不要使用get请求方式，要用post提交。这一篇有点长，读下来花了不少时间，也可能是自己英文阅读水平不高，继续努力。
 
 
 
