--- a/arts/20181102_week11.md
+++ b/arts/20181102_week11.md
@@ -26,11 +26,27 @@ If you have figured out the O(*n*) solution, try coding another solution using t
 class Solution {
     public int maxSubArray(int[] nums) {
         
+        int currSum = 0;
+        int maxSum = nums[0];
+        int size = nums.length;
+        
+        for(int i=0; i < size; i++){
+            if(currSum >= 0){
+                currSum = currSum + nums[i];
+            } else {
+                currSum = nums[i];
+            }
+            
+            if(currSum > maxSum){
+                maxSum = currSum;
+            }
+        }
+        return maxSum;
     }
 }
 ```
 
-
+这道题可以用动态规划来解决，对于当前的元素，有两个选择，要不就是成为加入当前的数列，要不就成为新的数列的起始元素。如果当前的子数列的最大值（currSum）大于等于0，那么当前元素加入子数列；如果小于0，那么当前元素就是新的子数列的起始元素。
 
 
 
